src/test/ui/proc-macro/issue-41211.stderr
error: inconsistent resolution for a macro: first custom attribute, then attribute macro
  --> $DIR/issue-41211.rs:9:4
   |
LL | #![identity_attr]
   |    ^^^^^^^^^^^^^

error: aborting due to previous error

